force-app/main/default/objects/WHS_Risks__c/WHS_Risks__c.object-meta.xml
<CustomObject>
    <label>WHS Risk</label>
    <nameField>
        <displayFormat>WHS Risk-{0000}</displayFormat>
        <label>WHS Risks Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WHS Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>