force-app/main/default/objects/WHS_Risks__c/fields/Additional_Controls_Required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Controls_Required__c</fullName>
    <label>Additional Controls Required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>