force-app/main/default/objects/WHS_Risks__c/fields/Associated_Harm__c.field-meta.xml
<CustomField>
    <fullName>Associated_Harm__c</fullName>
    <label>Associated Harm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>