force-app/main/default/objects/WHS_Risks__c/fields/Hazard__c.field-meta.xml
<CustomField>
    <fullName>Hazard__c</fullName>
    <description>Hazards associated with each task</description>
    <inlineHelpText>Hazards associated with each task</inlineHelpText>
    <label>Hazard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trip Hazard</fullName>
            </value>
            <value>
                <fullName>Distraction</fullName>
            </value>
            <value>
                <fullName>Ergonomic Hazard</fullName>
            </value>
            <value>
                <fullName>Fire Hazard</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Biological</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>