force-app/main/default/objects/WHS_Risks__c/fields/Hazard_Sub_type__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Sub_type__c</fullName>
    <label>Hazard Sub-type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Hazard__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Animal related</fullName>
            </value>
            <value>
                <fullName>Bacteria</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Electricity</fullName>
            </value>
            <value>
                <fullName>Extreme weather</fullName>
            </value>
            <value>
                <fullName>Falling object</fullName>
            </value>
            <value>
                <fullName>Flammable liquid</fullName>
            </value>
            <value>
                <fullName>Fungus</fullName>
            </value>
            <value>
                <fullName>General combustibles</fullName>
            </value>
            <value>
                <fullName>Hazardous substances</fullName>
            </value>
            <value>
                <fullName>Insects</fullName>
            </value>
            <value>
                <fullName>Loud noise</fullName>
            </value>
            <value>
                <fullName>Manual handling</fullName>
            </value>
            <value>
                <fullName>Oils</fullName>
            </value>
            <value>
                <fullName>Poor posture</fullName>
            </value>
            <value>
                <fullName>Slips, trips and falls</fullName>
            </value>
            <value>
                <fullName>Vibration</fullName>
            </value>
            <value>
                <fullName>Virus</fullName>
            </value>
            <value>
                <fullName>Working at height</fullName>
            </value>
            <value>
                <fullName>Workstation design</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>