force-app/main/default/objects/WHS_Risks__c/fields/Next_review_date__c.field-meta.xml
<CustomField>
    <fullName>Next_review_date__c</fullName>
    <description>Date of next review for on-going or open risks</description>
    <label>Next review date</label>
    <type>Date</type>
</CustomField>