force-app/main/default/objects/WHS_Risks__c/fields/Risk_Rating_after_New_Controls__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating_after_New_Controls__c</fullName>
    <label>Risk Rating after New Controls</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Extreme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>