force-app/main/default/objects/WHS_Risks__c/fields/Risk_Status__c.field-meta.xml
<CustomField>
    <fullName>Risk_Status__c</fullName>
    <inlineHelpText>Has the risk been addressed?</inlineHelpText>
    <label>Risk Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>On-going</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>