force-app/main/default/objects/WHS_Risks__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adelaide</fullName>
            </value>
            <value>
                <fullName>Bankstown</fullName>
            </value>
            <value>
                <fullName>Blacktown</fullName>
            </value>
            <value>
                <fullName>Brendale</fullName>
                <isActive>false</isActive>
                <label>Brendale</label>
            </value>
            <value>
                <fullName>Briar Hill</fullName>
            </value>
            <value>
                <fullName>Canberra - Bruce</fullName>
            </value>
            <value>
                <fullName>Central Coast</fullName>
            </value>
            <value>
                <fullName>Chermside</fullName>
            </value>
            <value>
                <fullName>Cockburn</fullName>
            </value>
            <value>
                <fullName>Dee Why</fullName>
            </value>
            <value>
                <fullName>Eastern Sydney</fullName>
            </value>
            <value>
                <fullName>Geelong</fullName>
            </value>
            <value>
                <fullName>Inglewood</fullName>
            </value>
            <value>
                <fullName>Ipswich</fullName>
            </value>
            <value>
                <fullName>Joondalup</fullName>
            </value>
            <value>
                <fullName>Macquarie Park</fullName>
            </value>
            <value>
                <fullName>Moonee Ponds</fullName>
            </value>
            <value>
                <fullName>Mornington</fullName>
            </value>
            <value>
                <fullName>Mulgrave</fullName>
            </value>
            <value>
                <fullName>Newcastle</fullName>
            </value>
            <value>
                <fullName>North Lakes</fullName>
            </value>
            <value>
                <fullName>Osborne Park</fullName>
                <isActive>false</isActive>
                <label>Osborne Park</label>
            </value>
            <value>
                <fullName>Penrith</fullName>
            </value>
            <value>
                <fullName>Robina</fullName>
            </value>
            <value>
                <fullName>Springwood</fullName>
            </value>
            <value>
                <fullName>Stones Corner</fullName>
            </value>
            <value>
                <fullName>Sunshine Coast</fullName>
            </value>
            <value>
                <fullName>Surrey Hills</fullName>
            </value>
            <value>
                <fullName>Toowoomba</fullName>
            </value>
            <value>
                <fullName>Werribee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>