force-app/main/default/objects/WHS_Risks__c/fields/Task_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Task_Scenario__c</fullName>
    <description>An activity may be divided into tasks.  For each task identify the hazards and associated risks.</description>
    <inlineHelpText>An activity may be divided into tasks.  For each task identify the hazards and associated risks.</inlineHelpText>
    <label>Task/Scenario</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>