force-app/main/default/objects/WHS_Risks__c/listViews/Chermside.listView-meta.xml
<ListView>
    <fullName>Chermside</fullName>
    <columns>NAME</columns>
    <columns>Hazard__c</columns>
    <columns>Hazard_Sub_type__c</columns>
    <columns>Task_Scenario__c</columns>
    <columns>Site__c</columns>
    <columns>Risk_Status__c</columns>
    <columns>Associated_Harm__c</columns>
    <columns>Risk_Rating__c</columns>
    <columns>Risk_Rating_after_New_Controls__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Site__c</field>
        <operation>equals</operation>
        <value>Chermside</value>
    </filters>
    <filters>
        <field>Risk_Status__c</field>
        <operation>equals</operation>
        <value>Open,On-going</value>
    </filters>
    <label>Chermside</label>
</ListView>