force-app/main/default/objects/WHS_Risks__c/listViews/NSW_Risks.listView-meta.xml
<ListView>
    <fullName>NSW_Risks</fullName>
    <columns>NAME</columns>
    <columns>Task_Scenario__c</columns>
    <columns>Site__c</columns>
    <columns>Risk_Status__c</columns>
    <columns>Associated_Harm__c</columns>
    <columns>Risk_Rating__c</columns>
    <columns>Risk_Rating_after_New_Controls__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Site__c</field>
        <operation>equals</operation>
        <value>Bankstown,Blacktown,Canberra - Bruce,Central Coast,Cockburn,Dee Why,Eastern Sydney,Inglewood,Joondalup,Macquarie Park,Newcastle,Penrith,Wollongong</value>
    </filters>
    <filters>
        <field>Risk_Status__c</field>
        <operation>equals</operation>
        <value>Open,On-going</value>
    </filters>
    <label>NSW,ACT,WA Risks</label>
</ListView>