force-app/main/default/objects/WHS_Risks__c/listViews/QLD_Risks.listView-meta.xml
<ListView>
    <fullName>QLD_Risks</fullName>
    <columns>NAME</columns>
    <columns>Task_Scenario__c</columns>
    <columns>Site__c</columns>
    <columns>Risk_Status__c</columns>
    <columns>Next_review_date__c</columns>
    <columns>Associated_Harm__c</columns>
    <columns>Risk_Rating__c</columns>
    <columns>Risk_Rating_after_New_Controls__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Site__c</field>
        <operation>contains</operation>
        <value>Chermside,Ipswich,North Lakes,Robina,Springwood,Stones Corner,Sunshine Coast,Toowoomba</value>
    </filters>
    <filters>
        <field>Risk_Status__c</field>
        <operation>equals</operation>
        <value>Open,On-going</value>
    </filters>
    <label>QLD Risks</label>
</ListView>