force-app/main/default/objects/WHS_Risks__c/listViews/Sunshine_Coast_WHS_Risks.listView-meta.xml
<ListView>
    <fullName>Sunshine_Coast_WHS_Risks</fullName>
    <columns>NAME</columns>
    <columns>Hazard__c</columns>
    <columns>Task_Scenario__c</columns>
    <columns>Site__c</columns>
    <columns>Risk_Status__c</columns>
    <columns>Associated_Harm__c</columns>
    <columns>Risk_Rating__c</columns>
    <columns>Risk_Rating_after_New_Controls__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Site__c</field>
        <operation>equals</operation>
        <value>Sunshine Coast</value>
    </filters>
    <label>Sunshine Coast WHS Risks</label>
</ListView>